Revelation changelog

---------------[ xxxx-xx-xx : 0.3.1 ]---------------

2004-06-16  Erik Grinaker <erikg@codepoet.no>

	* fixed a bug introduced by recent cleanups, which broke
	the TreeView.set_model() method - caused file locking to
	not empty the treeview

2004-06-11  Erik Grinaker <erikg@codepoet.no>

	* most dialogs can now be closed by pressing Escape

2004-06-10  Erik Grinaker <erikg@codepoet.no>

	* fixed a bug introduced in yesterday's cleanups, which
	omitted the treeview's scrolledwindow

	* implemented a custom FileEntry widget to use instead of
	the libgnomeui one - will hopefully fix some nasty crasher
	bugs

2004-06-09  Erik Grinaker <erikg@codepoet.no>

	* fixed a bug with spin buttons which made it impossible
	to set a value with the keyboard

	* when saving, missing parent directories are automatically
	created

	* the window size and main pane position is remembered

	* code cleanups in widget and ui code

2004-06-06  Erik Grinaker <erikg@codepoet.no>

	* split out data handlers into separate modules

2004-06-03  Erik Grinaker <erikg@codepoet.no>

	* the vertical scrollbar in the main window is only shown
	when needed

2004-05-09  Erik Grinaker <erikg@codepoet.no>

	* updated all references to the wired-networks.net domain
	to point to the new codepoet.no domain

	* added Id keyword to all code files

2004-04-30  Erik Grinaker <erikg@codepoet.no>

	* fixed a bug which caused the file selector to be opened
	when saving a file on quit confirmation

	* fixed a few bugs which caused fields containing & to
	behave unpredicably (not always displayed)


---------------[ 2004-04-06 : 0.3.0 ]---------------

2004-04-05  Erik Grinaker <erikg@wired-networks.net>

	* fixed a bug which caused previously expanded folders to
	retain the open folder icon after the file is unlocked

	* set a sane default button (cancel) for the revert
	confirmation dialog

	* added a NEWS file

	* added note on restarting gconfd to the INSTALL file
