@@ -2,6 +2,11 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.3.1 ]---------------
 
+2004-06-22  Erik Grinaker <erikg@codepoet.no>
+
+	* rewrote internal data handling routines to use an Entry
+	object instead of a normal dictionary
+
 2004-06-16  Erik Grinaker <erikg@codepoet.no>
 
 	* fixed a bug introduced by recent cleanups, which broke
